tests/paczka1/small_fuzzy/72272433.err
Error in line 1: QbvmG S916 77,5
Error in line 7: QbvmG A33 87,4
Error in line 9: 4urR8tQ5I S972 447,6
